# vp-sdk

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
tendermint-vp-sdk/: Cargo.toml
tendermint-vp-sdk/src/: chan_msg.rs  client_msg.rs  conn_msg.rs  get_pubkey.rs  lib.rs  query_ic.rs  start_msg.rs  types.rs  update_ic.rs
tendermint-vp-sdk/tests/: integration_test.rs
tendermint-vp-sdk/tests/common/: data.rs
tendermint-vp-sdk/tests/resource/: canister_id
