[package]
name = "tendermint-vp-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.4"
ic-cdk = "0.7.1"

ic-agent = "0.24.1"
serde_json = "1.0.96"
garcon = "0.2.3"
serde = { version = "1.0.130", features = ["derive"] }

tokio = { version = "1.28.2", features = ["full"] }

ring = "0.16.20"


# ibc-proto = { default-features = false, git = "https://github.com/octopus-network/ibc-proto-rs.git", branch = "full-cosmos-type-v0.25.0"}
# prost = { version = "0.11", default-features = false }